css/style.css
/* ... */
          #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
            color: #000;
            border: 1px solid #000;
            background: transparent !important; }
            #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
              background: transparent !important;
              border: 1px solid #000 !important; }
          @media screen and (max-width: 768px) {
            #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
              width: 100%; } }

body.offcanvas {
  overflow-x: hidden; }
  body.offcanvas #colorlib-aside {
    -moz-transform: translateX(0);
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
    width: 300px;
    background: #f2f3f7;
    z-index: 999;
    position: fixed; }
  body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
    top: 0;
    -moz-transform: translateX(300px);
    -webkit-transform: translateX(300px);
    -ms-transform: translateX(300px);
    -o-transform: translateX(300px);
    transform: translateX(300px); }

.colorlib-narrow-content {
  padding: 0 2.5em; }
  @media screen and (max-width: 768px) {
    .colorlib-narrow-content {
      padding: 0; } }

.no-gutters {
  margin: 0;
  padding: 0; }

.colorlib-experience,
.colorlib-skills,
.colorlib-education,
.colorlib-blog,
.colorlib-work,
.colorlib-about,
.colorlib-services,
.colorlib-contact {
  padding-top: 4em;
  padding-bottom: 9em;
  clear: both;
  width: 100%;
  display: block; }
  @media screen and (max-width: 768px) {
    .colorlib-experience,
    .colorlib-skills,
    .colorlib-education,
    .colorlib-blog,
    .colorlib-work,
    .colorlib-about,
    .colorlib-services,
    .colorlib-contact {
      padding-top: 5em;
      padding-bottom: 8em; } }

.author-img {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative; }

.colorlib-heading {
  font-size: 18px;
  margin-bottom: 4em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 5px;
  line-height: 1.8;
  position: relative; }
  .colorlib-heading span {
    display: block; }
  @media screen and (max-width: 768px) {
    .colorlib-heading {
      margin-bottom: 3em; } }

.heading-meta {
  margin-bottom: 15px;
  display: block;
  font-size: 10px;
  text-transform: uppercase;
  color: #999999;
  font-weight: 500;
  letter-spacing: 5px; }

.about-img {
  width: 100%;
  height: 600px;
  margin-bottom: 30px; }

.about-desc h3 {
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 5px;
  font-weight: 500; }

.hire {
  padding: 2em;
  background: #f9bf3f; }
  .hire h2 {
    line-height: 1.5; }
  .hire .btn-hire {
    color: #000;
    text-transform: uppercase;
    letter-spacing: 1px;
    bordeR: 1px solid #000;
    padding: 2px 10px; }

.fancy-collapse-panel .panel-default > .panel-heading {
  padding: 0; }

.panel-heading a {
  padding: 20px 25px;
  display: block;
  width: 100%;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-family: "Quicksand", Arial, sans-serif;
  background-color: #2c98f0;
  color: #fff;
  position: relative;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  -o-box-shadow: none !important;
  box-shadow: none !important; }

.panel {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  -o-box-shadow: none !important;
  box-shadow: none !important;
  border: none; }

.panel-heading a:after {
  font-family: "icomoon";
  content: "\e115";
  position: absolute;
  right: 20px;
  font-size: 14px;
  font-weight: 400;
  top: 50%;
  line-height: 1;
  margin-top: -7px; }

.panel-heading a.collapsed:after {
  content: "\e114"; }

.panel-heading a.collapsed {
  background: #f2f3f7;
  border: 1px solid #e6e6e6 !important;
  color: #333333; }

.panel-body {
  padding: 1.5em;
  margin-top: 5px;
  border: 1px solid #e6e6e6 !important; }

.timeline-centered {
  position: relative;
  margin-bottom: 30px; }

.timeline-centered:before, .timeline-centered:after {
  content: " ";
  display: table; }

.timeline-centered:after {
  clear: both; }

.timeline-centered:before, .timeline-centered:after {
  content: " ";
  display: table; }

.timeline-centered:after {
  clear: both; }

.timeline-centered:before {
  content: '';
  position: absolute;
  display: block;
  width: 4px;
  background: #f2f3f7;
  top: 20px;
  bottom: 20px;
  margin-left: 29px; }

.timeline-centered .timeline-entry {
  position: relative;
  margin-top: 5px;
  margin-left: 30px;
  margin-bottom: 10px;
  clear: both; }

.timeline-centered .timeline-entry .timeline-entry-inner {
  position: relative;
  margin-left: -20px; }

.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon {
  display: block;
  width: 40px;
  height: 40px;
  background: #2c98f0;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  border-radius: 50%;
  text-align: center;
  -moz-box-shadow: 0 0 0 5px #f2f3f7;
  -webkit-box-shadow: 0 0 0 5px #f2f3f7;
  box-shadow: 0 0 0 5px #f2f3f7;
  line-height: 40px;
  float: left; }
  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon i {
    color: #fff; }
  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-2 {
    background: #ec5453; }
  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-3 {
    background: #f9bf3f; }
  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-4 {
    background: #a84cb8; }
  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-5 {
    background: #2fa499; }
/* ... */

